fix layout problem css

--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -109,7 +109,7 @@ main {
 @supports (display: grid) {
   main {
     width: auto;
-    max-width: none;
+    max-width: 100%;
   }
 }
 
